--- a/view/css/deitails.css
+++ b/view/css/deitails.css
@@ -132,7 +132,7 @@ ul {
     justify-content: space-between;
 }
 
-.plus {
+#add {
     width: 25px;
     height: 25px;
     border: none;
@@ -141,7 +141,7 @@ ul {
     font-size: 25px;
 }
 
-.input-qty {
+#number_room {
     width: 100px;
     height: 25px;
     border: none;
@@ -189,6 +189,30 @@ ul {
     border: none;
     color: #FFFFFF;
 }
+#reduce{
+    width: 25px;
+    height: 25px;
+    border: none;
+    background-color: #F54748;
+    color: #fff;
+    font-size: 25px;
+}
+
+#add {
+    width: 25px;
+    height: 25px;
+    border: none;
+    background-color: #391bc2;
+    color: #fff;
+    font-size: 25px;
+}
+
+#number_room {
+    width: 120px;
+    height: 25px;
+    border: none;
+    background: #F5F6F8;
+}
 
 .submit-content {
     width: 80px;
@@ -201,6 +225,39 @@ ul {
     color: #FFFFFF;
 }
 
+h3{
+    margin-left: 20px;
+    color: #707573;
+    font-weight: 700; 
+}
+   .room-next{
+       color: #707573;
+       font-weight: 700;
+       text-align: center;
+       margin-left: 20px;
+       margin-right: 20px;
+       padding-top: 30px;
+       display: grid;
+       grid-template-columns: 31.5% ;
+       grid-gap: 4%;
+       padding-bottom: 80px;
+   }
+   
+   .next img{
+    border-radius: 8px;
+       max-width: 400px;
+   }
+footer {
+    width: 100%;
+    margin: auto;
+    padding: 30px;
+    padding-top: 25px;
+    margin-top: 30px;
+    padding-bottom: 12px;
+    background-color: rgb(42, 42, 46);
+    color: rgb(215, 215, 219);
+    text-align: center;
+}
 @media (min-width:768px) {
     .logo {
         display: none;
@@ -304,7 +361,7 @@ ul {
         padding: 20px 0;
     }
 
-    .minus {
+    #reduce{
         width: 45px;
         height: 45px;
         border: none;
@@ -313,7 +370,7 @@ ul {
         font-size: 25px;
     }
 
-    .plus {
+    #add {
         width: 45px;
         height: 45px;
         border: none;
@@ -322,7 +379,7 @@ ul {
         font-size: 25px;
     }
 
-    .input-qty {
+    #number_room {
         width: 180px;
         height: 45px;
         border: none;
@@ -381,6 +438,48 @@ ul {
         border: none;
         color: #FFFFFF;
     }
+    h3{
+        margin-left: 20px;
+        color: #707573;
+        font-weight: 700; 
+    }
+       .room-next{
+           color: #707573;
+           font-weight: 700;
+           text-align: center;
+           margin-left: 20px;
+           margin-right: 20px;
+           padding-top: 30px;
+           display: grid;
+           grid-template-columns: 31.5% 31.5% 31.5%;
+           grid-gap: 4%;
+       }
+       
+       .next img{
+        border-radius: 8px;
+           max-width: 400px;
+       }
+       h3{
+        margin-left: 20px;
+        color: #707573;
+        font-weight: 700; 
+    }
+       .room-next{
+           color: #707573;
+           font-weight: 700;
+           text-align: center;
+           margin-left: 20px;
+           margin-right: 20px;
+           padding-top: 30px;
+           display: grid;
+           grid-template-columns: 31.5% 31.5% 31.5%;
+           grid-gap: 4%;
+       }
+       
+       .next img{
+        border-radius: 8px;
+           max-width: 400px;
+       }
 }
 
 @media(min-width:1280px) {
@@ -409,7 +508,6 @@ ul {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-color: #fff;
         width: 100%;
         height: 80px;
         margin-bottom: 69px;
@@ -495,12 +593,15 @@ ul {
 
     .produc {
         margin-left: 20px;
-        display: grid;
-        grid-template-columns: 2fr 1fr;
-        grid-gap: 30px;
+        display: flex;
+        justify-content: space-between;
     }
-
+.room-desc{
+    margin-left: 40px;
+    width: 800px;
+}
     .room-desc h3 {
+       
         padding-top: 20px;
     }
 
@@ -526,10 +627,11 @@ ul {
     }
 
     .room-price {
+        width: 300px;
         text-align: center;
         border: 1px solid #E5E5E5;
-        border-radius: 4px;
-        margin-right: 20px;
+        border-radius: 15px;
+        margin-right: 50px;
         box-shadow: 0px 8px 15px rgba(145, 145, 146, 0.3);
     }
 
@@ -623,7 +725,72 @@ ul {
         border: none;
         color: #FFFFFF;
     }
+h3{
+    margin-left: 20px;
+    color: #707573;
+    font-weight: 700; 
+}
+   .room-next{
+       color: #707573;
+       font-weight: 700;
+       text-align: center;
+       margin-left: 20px;
+       margin-right: 20px;
+       padding-top: 30px;
+       display: grid;
+       grid-template-columns: 31.5% 31.5% 31.5%;
+       grid-gap: 4%;
+   }
+   
+   .next img{
+    border-radius: 8px;
+       max-width: 400px;
+   }
 
+   html, body{
+    background: #fff;
+    transition: var(--transition-effect);
+}
+body.dark {
+    width: 100%;
+    background: rgb(10, 10, 10);
+}
+#wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+.switch-toggle{
+    width: 90px;
+    height: 50px;
+    appearance: none;
+    background: #83d8ff;
+    border-radius: 26px;
+    position: relative;
+    cursor: pointer;
+    box-shadow: inset 0px 0px 16px rgba(0, 0, 0, .3);
+    transition: var(--transition-effect);
+}
+.switch-toggle::before{
+    content: "";
+    width: 44px;
+    height: 44px;
+    position: absolute;
+    top: 3px;
+    left: 3px;
+    background: #efe2bf;
+    border-radius: 50%;
+    box-shadow: 0px 0px 6px rgba(0, 0, 0, .3);
+    transition: var(--transition-effect);
+
+}
+.switch-toggle:checked{
+    background: #749dd6;
+}
+.switch-toggle:checked:before{
+    left: 40px;
+}
     footer {
         width: 100%;
         margin: auto;
