--- a/controller/quanTri.css
+++ b/controller/quanTri.css
@@ -14,6 +14,9 @@
     height: 100px;
     color: rgb(13, 23, 117);
 }
+.category-1 a h2{
+    display: inline-block;
+}
 
 .category-1 h2:hover{
     color: rgb(243, 22, 22);
@@ -32,23 +35,9 @@
 }
 
 .content {
-    background-color: rgb(255, 255, 255);
     padding-top: 20px;
     padding-left: 20px;
 }
-
-.content h1 {
-    box-sizing: border-box;
-    padding: 0px;
-    border: none;
-    color: rgb(0, 0, 0);
+.content h1{
     text-align: center;
-    text-overflow: clip;
-    white-space: pre;
-    text-shadow: 0 0 10px rgba(255, 255, 255, 1), 0 0 20px rgba(255, 255, 255, 1), 0 0 30px rgba(255, 255, 255, 1), 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de;
-    transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
-}
-
-.content h1:hover{
-    text-shadow: 0 0 10px rgba(255,255,255,1) , 0 0 20px rgba(255,255,255,1) , 0 0 30px rgba(255,255,255,1) , 0 0 40px #00ffff , 0 0 70px #00ffff , 0 0 80px #00ffff , 0 0 100px #00ffff ;
 }
