--- a/view/css/deitails.css
+++ b/view/css/deitails.css
@@ -79,6 +79,12 @@ ul {
     margin: 5px;
 }
 
+.price #price_room {
+    width: 100%;
+    border: 0;
+    background-color: transparent;
+}
+
 .price h4 {
     margin: 20px 0;
 }
@@ -149,6 +155,10 @@ ul {
     height: 25px;
     border: none;
     background: #F5F6F8;
+}
+
+.pick-date {
+    margin: 0 0 20px 0;
 }
 
 .pick-date h4 {
