--- a/controller/kindRoom/add.css
+++ b/controller/kindRoom/add.css
@@ -1,19 +1,24 @@
-.tin {
-    font-size: 30px;
-}
-
-.the {
-    width: 100%;
-    height: 40px;
+input{
+    width: 95%;
+    height: 30px;
     border: 2px solid black;
     border-radius: 5px;
     margin: 5px 0;
     font-size: 17px;
     padding-left: 10px;
-
+    margin: 15px 0px;
+    margin-left: 15px;
 }
-
-.nut {
+select{
+    margin: 20px 0px;
+    margin-left: 15px;
+    padding: 10px;
+}
+label{
+    margin-left: 15px;
+    font-size: 20px;
+}
+.nut{
     width: 80px;
     height: 30px;
     background-color: aqua;
@@ -21,5 +26,4 @@
     color: black;
     margin-bottom: 10px;
     border: 1px solid black;
-
 }
