--- a/controller/room/add.css
+++ b/controller/room/add.css
@@ -9,6 +9,16 @@ input{
     margin: 15px 0px;
     margin-left: 15px;
 }
+textarea{
+    width: 95%;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin: 5px 0;
+    font-size: 17px;
+    padding-left: 10px;
+    margin: 15px 0px;
+    margin-left: 15px;
+}
 select{
     margin: 20px 0px;
     margin-left: 15px;
